<resources>
    <string name="app_name">Spacefeed</string>
    <string name="demo_card_text">Material</string>
    <string name="image_placeholder_description">Placeholder</string>
    <string name="username">Username</string>
    <string name="likes">likes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_image">Full Image</string>
    <string name="dialog_download">Download</string>
    <string name="dialog_delete">DELETE</string>
    <string name="default_no_bio">There is no bio to show</string>
    <string name="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque finibus eleifend urna, quis elementum magna ultricies sed. Suspendisse sodales et purus eget sollicitudin. Proin sit amet feugiat mi, at euismod mauris. Praesent nec nulla et dui pretium tincidunt sed finibus felis. Fusce consectetur consequat ipsum. Cras bibendum maximus mi, a rhoncus est scelerisque vitae. Aliquam erat volutpat. In auctor massa eget faucibus malesuada. Donec in laoreet massa. Pellentesque nec ipsum lacus. In non elementum sem. Sed malesuada non ligula dignissim fermentum. Aliquam ultricies rhoncus metus nec vehicula. Nulla sed lacus sed elit condimentum tempor quis ut eros. Pellentesque non arcu mollis, volutpat arcu vel, rhoncus risus.  Donec sed ante vitae odio consectetur bibendum. Sed finibus orci a dolor fringilla, in condimentum mauris molestie. Sed pretium purus a varius interdum. Ut eget euismod risus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed sed lacus gravida, dapibus risus vitae, vestibulum justo. Nunc porta urna nec purus mattis dictum nec in arcu. Pellentesque sed velit fringilla, vulputate purus tempus, porttitor quam. Integer gravida libero magna, quis pellentesque justo gravida sit amet. Cras aliquet, urna eu ultrices maximus, est turpis facilisis augue, id luctus justo neque vitae nibh. Vivamus hendrerit ligula in fermentum tristique.  In hac habitasse platea dictumst. Proin volutpat tempor magna, ut commodo purus malesuada ac. Quisque tempus aliquet turpis eu interdum. Nunc lobortis luctus ipsum, sed semper turpis ultricies nec. In vitae quam mauris. Duis congue faucibus porttitor. Curabitur in arcu lectus. Sed pharetra congue libero, at faucibus lectus efficitur eget. In aliquam lorem vel mauris imperdiet, in condimentum enim vehicula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque finibus eleifend urna, quis elementum magna ultricies sed. Suspendisse sodales et purus eget sollicitudin. Proin sit amet feugiat mi, at euismod mauris. Praesent nec nulla et dui pretium tincidunt sed finibus felis. Fusce consectetur consequat ipsum. Cras bibendum maximus mi, a rhoncus est scelerisque vitae. Aliquam erat volutpat. In auctor massa eget faucibus malesuada. Donec in laoreet massa. Pellentesque nec ipsum lacus. In non elementum sem. Sed malesuada non ligula dignissim fermentum. Aliquam ultricies rhoncus metus nec vehicula. Nulla sed lacus sed elit condimentum tempor quis ut eros. Pellentesque non arcu mollis, volutpat arcu vel, rhoncus risus.  Donec sed ante vitae odio consectetur bibendum. Sed finibus orci a dolor fringilla, in condimentum mauris molestie. Sed pretium purus a varius interdum. Ut eget euismod risus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed sed lacus gravida, dapibus risus vitae, vestibulum justo. Nunc porta urna nec purus mattis dictum nec in arcu. Pellentesque sed velit fringilla, vulputate purus tempus, porttitor quam. Integer gravida libero magna, quis pellentesque justo gravida sit amet. Cras aliquet, urna eu ultrices maximus, est turpis facilisis augue, id luctus justo neque vitae nibh. Vivamus hendrerit ligula in fermentum tristique.  In hac habitasse platea dictumst. Proin volutpat tempor magna, ut commodo purus malesuada ac. Quisque tempus aliquet turpis eu interdum. Nunc lobortis luctus ipsum, sed semper turpis ultricies nec. In vitae quam mauris. Duis congue faucibus porttitor. Curabitur in arcu lectus. Sed pharetra congue libero, at faucibus lectus efficitur eget. In aliquam lorem vel mauris imperdiet, in condimentum enim vehicula.</string>
    <string name="menu_photo_latest">Latest</string>
    <string name="menu_photo_oldest">Oldest</string>
    <string name="menu_photo_popular">Popular</string>
    <string name="menu_trending_latest">Latest</string>
    <string name="menu_trending_oldest">Oldest</string>
    <string name="menu_trending_popular">Popular</string>
    <string name="menu_collection_all">All</string>
    <string name="menu_collection_curated">Curated</string>
    <string name="menu_collection_featured">Featured</string>
    <string name="menu_sort_by">Sort by</string>
    <string name="menu_search_by">Search by</string>
    <string name="f_f_empty_text">LALALALA... Kuch na mil rha.</string>
</resources>
