<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/card_spacing"
    android:layout_marginRight="@dimen/card_spacing"
    android:layout_marginTop="@dimen/card_spacing"
    android:minHeight="400dp"
    android:id="@+id/card_bg"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:id="@+id/row_content_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:contentDescription="@string/image_placeholder_description"
            android:scaleType="centerCrop"
            android:src="@drawable/dude" />

        <RelativeLayout
            android:id="@+id/bottom_part"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/card_spacing"
                android:text="@string/username"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/num_of_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/card_spacing"
                android:text="@string/likes"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>


</android.support.design.card.MaterialCardView>